<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.m25dev.courtcounter.MainActivity">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="368dp"
            android:layout_height="392dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/team_a_string"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@android:color/background_dark"
                    android:textSize="54sp"/>

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:background="?colorPrimary"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:onClick="addThreePoints"
                    android:tag="teamA"
                    android:text="@string/add_three_points_string"/>

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:background="?colorPrimary"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:onClick="addTwoPoints"
                    android:tag="teamA"
                    android:text="@string/add_two_points_string"/>

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:background="?colorPrimary"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:onClick="addOnePoint"
                    android:tag="teamA"
                    android:text="@string/free_throw_string"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="312dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/team_b_string"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans"/>

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@android:color/background_dark"
                    android:textSize="54sp"/>

                <Button
                    android:id="@+id/button11"
                    style="@style/DarkTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="?colorPrimary"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:onClick="addThreePoints"
                    android:tag="teamB"
                    android:text="@string/add_three_points_string"/>

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:background="?colorPrimary"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:onClick="addTwoPoints"
                    android:tag="teamB"
                    android:text="@string/add_two_points_string"/>

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="?colorPrimary"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:onClick="addOnePoint"
                    android:tag="teamB"
                    android:text="@string/free_throw_string"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="?colorPrimary"
            android:textColor="?android:textColorPrimaryInverse"
            android:onClick="reset"
            android:text="@string/reset_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.776"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>